# chatcut

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  LICENSE  README.md  README.ru.md  config.example.toml  pyproject.toml  setup.ps1  setup.sh
chatcut/: __init__.py  cli.py  media.py
chatcut/core/: __init__.py  checkpoint.py  config.py  context.py  errors.py  pipeline.py  tool.py
chatcut/tools/: __init__.py  color.py  cut_meaning.py  cut_silence.py  motion_hyperframes.py  normalize.py  render.py  subtitles.py  transcribe_whisper.py
docs/: extending.md  troubleshooting.md
pipelines/: talking_head.yaml
presets/luts/: cool_cinema.cube  moody_desaturated.cube  vibrant_pop.cube  warm_film.cube
skills/: production-rules.md
tests/: smoke_cli.py  smoke_cut_meaning.py  smoke_ffmpeg.py  smoke_subs_color.py  smoke_tools.py  test_core.py
